--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
       <p>
         <label for="peanuts">How allergic are you to peanuts?</label>
-        <input type="range" name="peanuts" id="peanuts" min="1" max="13">
-        <span id="peanut-display">6.5</span>
+        <input type="range" name="peanuts" id="peanuts" min="0" max="12">
+        <span id="peanut-display">6</span>
       </p>
 
     </section>
@@ -46,16 +46,16 @@
 
         <h4>Favorite Tiger Names</h4>
         <label for="tony">Tony</label>
-        <input for="tony" value="tony" type="checkbox" id="tony">
+        <input name="tiger" for="tony" value="tony" type="checkbox" id="tony">
 
         <label for="tigger">Tigger</label>
-        <input for="tigger" value="tigger" type="checkbox" id="tigger">
+        <input name="tiger" for="tigger" value="tigger" type="checkbox" id="tigger">
 
         <label for="sally">Sally</label>
-        <input for="sally" value="sally" type="checkbox" id="sally">
+        <input name="tiger" for="sally" value="sally" type="checkbox" id="sally">
 
         <label for="frank">Frank</label>
-        <input for="frank" value="frank" type="checkbox" id="frank">
+        <input name="tiger" for="frank" value="frank" type="checkbox" id="frank">
       </fieldset>
     </section>
     <section>
