--- a/apply.html
+++ b/apply.html
@@ -16,6 +16,7 @@
     <section>
       <h2>Fill out info to best of your ability.</h2>
       <p>
+        <!-- The for attribute of the label tag should be equal to the id attribute of the related element to bind them together -->
         <label for="name">Name:</label>
         <input type="text" name="name" id="name">
       </p>
@@ -40,7 +41,8 @@
     <section>
       <fieldset>
         <legend>Do you like elephants?</legend>
-        <label for="yes">Yes</label>
+        <label git add -A
+        >Yes</label>
         <input type="radio" name="elephants" id="yes" value="yes">
 
         <label for="no">No</label>
