--- a/apply.html
+++ b/apply.html
@@ -41,8 +41,7 @@
     <section>
       <fieldset>
         <legend>Do you like elephants?</legend>
-        <label git add -A
-        >Yes</label>
+        <label for="yes">Yes</label>
         <input type="radio" name="elephants" id="yes" value="yes">
 
         <label for="no">No</label>
