--- a/apply.html
+++ b/apply.html
@@ -66,6 +66,6 @@
   </form>
 </main>
 <footer>this is a footer</footer>
-<script type="module" src="./src/apply.js"></script>
+<script type="module" src="./src/apply/apply.js"></script>
 </body>
 </html>
