api hooked up to applicant detail

--- a/apply.html
+++ b/apply.html
@@ -46,12 +46,12 @@
     <section>
       <fieldset>
         <legend>Favorite Tiger Names</legend>
-      
+
         <label for="tony">Tony</label>
         <input name="tiger" for="tony" value="tony" type="checkbox" id="tony">
 
         <label for="tiger-face">Tiger Face</label>
-        <input name="tiger" for="tiger-face" value="tiger-face" type="checkbox" id="tiger-face">
+        <input name="tiger" for="tiger-face" value="tiger face" type="checkbox" id="tiger-face">
 
         <label for="sally">Sally</label>
         <input name="tiger" for="sally" value="sally" type="checkbox" id="sally">
