--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
   <h1>Please Apply to Our Circus</h1>
  <a href="./apply.html">Click Here To Apply</a>
+ <a href="./applicant-detail.html">Applicant</a>
 </body>
 </html>
