--- a/applicant-detail.html
+++ b/applicant-detail.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+
 <body>
   <header>
     <h1>Applicant Detail</h1>
@@ -23,6 +24,9 @@
         <dd id="tiger-names"></dd>
       </dl>
     </section>
+
+    <!-- <section id="applicant-detail"></section> -->
+
   </main>
   <script type="module" src="./src/applicant-detail/applicant-detail.js"></script>
 </body>
