--- a/src/apply/index.html
+++ b/src/apply/index.html
@@ -7,11 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <nav>
-    <a href="index.html">home</a>
-    <a href="applicant-detail.html">applicant detail</a>
-  </nav>
-  <h1>thank u</h1>
   
+  <script src="./local-storage-example.js"></script>
 </body>
 </html>
