all set, applicants rendering to table, linked to applicants from home

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   
  <a href="./apply.html">Click Here To Apply</a>
  <a href="./applicant-detail.html">Applicant</a>
+ <a href="./applicants.html">Applicants</a>
 </body>
 </html>
