--- a/applicants.html
+++ b/applicants.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Applicants</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
     <section>
       <table>
         <thead>
-          <tr>
+          <tr id="header-row">
             <td>Name:</td>
             <td>Position:</td>
             <td>Allergic:</td>
